--- a/MyHome/app/src/main/res/layout/fragment_my_care_cost.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care_cost.xml
@@ -7,14 +7,19 @@
     android:scrollbars="none"
     tools:context="com.televisit.services.MyCareServicesFragment">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/mcn_logo" />
+
     <TextView
         android:id="@+id/costInfo"
-        style="@style/tradeGothicLTStd_Dynamic18"
+        style="@style/tradeGothicLTStd_Dynamic20"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="58dp"
         android:text="@string/visit_cost_desc"
-        android:textColor="@color/black"
         android:textStyle="bold" />
 
     <LinearLayout
