Applause Accessibility - 2872014 Talkback: Settings: No instructions for changing security question is fixed

--- a/MyHome/app/src/main/res/layout/fragment_sec_password.xml
+++ b/MyHome/app/src/main/res/layout/fragment_sec_password.xml
@@ -8,15 +8,6 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp">
 
-        <TextView
-            android:id="@+id/desc"
-            style="@style/tradeGothicLTStd_Dynamic34"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Enter Password for security question change"
-            android:visibility="gone" />
-
         <android.support.design.widget.TextInputLayout
             android:id="@+id/password_layout"
             android:layout_width="match_parent"
@@ -25,6 +16,7 @@
             app:errorTextAppearance="@style/error_appearance"
             app:hintTextAppearance="@style/hint_appearance"
             app:passwordToggleEnabled="true"
+            android:importantForAccessibility="no"
             app:passwordToggleTint="@color/primary">
 
             <android.support.design.widget.TextInputEditText
@@ -35,6 +27,7 @@
                 android:layout_marginBottom="8dp"
                 android:drawableRight="@mipmap/show_password"
                 android:hint="@string/prompt_password"
+                android:contentDescription="@string/enter_pass_for_sec_change"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
                 android:maxLines="1"
