--- a/MyHome/app/src/main/res/layout/medication_item.xml
+++ b/MyHome/app/src/main/res/layout/medication_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:padding="16dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="6dp">
 
     <TextView
         android:id="@+id/medication_text"
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
+        android:padding="10dp"
         android:text="Show More API Error Info" />
 
     <TextView
@@ -19,7 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_margin="6dp"
-        android:text="Delete"
+        android:padding="10dp"
+        android:text="@string/msg_detail_action_delete"
         android:textColor="@color/accent"
         android:textStyle="bold" />
 </RelativeLayout>
