--- a/MyHome/app/src/main/res/layout/adapter_pharmacy_list_item.xml
+++ b/MyHome/app/src/main/res/layout/adapter_pharmacy_list_item.xml
@@ -11,50 +11,45 @@
     </data>
 
     <RelativeLayout
+        android:id="@+id/itemLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
+        android:onClick="@{handlers::onClickPharmacy}"
+        android:orientation="vertical"
+        android:layout_margin="16dp">
 
-        <RelativeLayout
-            android:id="@+id/itemLayout"
+        <TextView
+            android:id="@+id/pharmacyDisplayName"
+            style="@style/tradeGothicLTStdLight_20"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="@{handlers::onClickPharmacy}"
-            android:orientation="vertical">
+            android:layout_alignParentLeft="true"
+            android:text="Richard Paul, MD"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/pharmacyDisplayName"
-                style="@style/tradeGothicLTStdLight_20"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:text="Richard paul, MD"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/pharmacyAddress"
-                style="@style/tradeGothicLTStd_Dynamic18"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/pharmacyDisplayName"
-                android:text="Denver, CO" />
-
-            <TextView
-                android:id="@+id/distance"
-                style="@style/tradeGothicLTStd_Dynamic18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/pharmacyAddress"
-                android:layout_marginBottom="16dp"
-                android:lines="1"
-                android:text="10.4 miles" />
-        </RelativeLayout>
-
-        <View
+        <TextView
+            android:id="@+id/pharmacyAddress"
+            style="@style/tradeGothicLTStd_Dynamic18"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="20dp"
-            android:background="@color/db_white" />
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/pharmacyDisplayName"
+            android:text="Denver, CO" />
+
+        <TextView
+            android:id="@+id/distance"
+            style="@style/tradeGothicLTStd_Dynamic18"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/pharmacyAddress"
+            android:lines="1"
+            android:text="10.4 miles" />
+
+        <ImageView
+            android:layout_width="12dp"
+            android:layout_height="24dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/ic_carrot_blue" />
     </RelativeLayout>
 </layout>
