--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -162,7 +162,6 @@
 
     <style name="tradeGothicLTStd_Dynamic20" parent="tradeGothicLTStd">
         <item name="android:textSize">@dimen/scalable_20</item>
-
     </style>
 
     <style name="tradeGothicLTStd_Bold_Dynamic20" parent="tradeGothicLTStdBold">
@@ -173,6 +172,11 @@
     <style name="tradeGothicLTStd_Dynamic22" parent="tradeGothicLTStdLight">
         <item name="android:textSize">@dimen/scalable_22</item>
     </style>
+
+    <style name="tradeGothicLTStd_Dynamic24" parent="tradeGothicLTStd">
+        <item name="android:textSize">@dimen/scalable_24</item>
+    </style>
+
     <style name="tradeGothicLTStd_Dynamic32" parent="tradeGothicLTStdBold">
         <item name="android:textSize">@dimen/scalable_32</item>
         <item name="android:textColor">@color/md_blue_grey_650</item>
