--- a/MyHome/app/src/main/res/layout/fragment_pharmacy_details.xml
+++ b/MyHome/app/src/main/res/layout/fragment_pharmacy_details.xml
@@ -9,11 +9,10 @@
         android:layout_height="match_parent">
 
         <fragment
-            android:id="@+id/phramacy_map"
+            android:id="@+id/pharmacy_map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:layout_below="@id/expandable_layout"
+            android:layout_height="200dp"
             map:cameraTargetLat="39.720050"
             map:cameraTargetLng="-104.817219"
             map:cameraZoom="3"
@@ -31,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_below="@id/phramacy_map"
+            android:layout_below="@id/pharmacy_map"
             android:layout_margin="24dp"
             android:text="Richard Paul, MD"
             android:textStyle="bold" />
