--- a/MyHome/app/src/main/res/layout/fragment_my_care.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care.xml
@@ -44,6 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/mcn_desc"
             android:layout_centerHorizontal="true"
+            android:minWidth="285dp"
             android:padding="16dp"
             android:text="@string/get_started" />
 
