1. Checking for mycare eligibility, setting a value in AuthManager singleton instance 2. If user is not eligible to see mycare, bottom navigation hides mycare and shows Profile tab instead 3. Similarly welcome_home screen as well should hide mycare stuff
Ticket:
25007: Android: Recognize My CareNow customer based on login information

--- a/MyHome/app/src/main/res/layout/bottom_navigation_layout.xml
+++ b/MyHome/app/src/main/res/layout/bottom_navigation_layout.xml
@@ -15,7 +15,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:itemIconTint="@drawable/navigation_icon_colors"
-        app:itemTextColor="@drawable/navigation_icon_colors"
-        app:menu="@menu/navigation_menu" />
-
+        app:itemTextColor="@drawable/navigation_icon_colors" />
 </LinearLayout>
