1. Checking for mycare eligibility, setting a value in AuthManager singleton instance 2. If user is not eligible to see mycare, bottom navigation hides mycare and shows Profile tab instead 3. Similarly on welcome home screen as well, hiding mycare segment
Ticket:
25007: Android: Recognize My CareNow customer based on login information

--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -304,6 +304,7 @@
                     android:text="@string/bill_pay_desc" />
 
                 <RelativeLayout
+                    android:id="@+id/myCareSegment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="11dp"
