--- a/MyHome/app/src/main/res/layout/fragment_secq.xml
+++ b/MyHome/app/src/main/res/layout/fragment_secq.xml
@@ -32,6 +32,7 @@
             android:layout_below="@+id/select_question"
             android:layout_marginTop="70dp"
             app:errorEnabled="true"
+            android:textColorHint="@color/grey_450"
             app:errorTextAppearance="@style/error_appearance"
             app:hintTextAppearance="@style/hint_appearance">
 
