Profile visibility in more options: a. Users with access to MyCareNow can see PROFILE from the more option context menu. b. Users with NO access to MyCareNow can see PROFILE icon right in the bottom navigation, hence NOT displaying it in more option menu. Ticket: Task 27000 of the story 26758.

--- a/MyHome/app/src/main/res/menu/toolbar_menu.xml
+++ b/MyHome/app/src/main/res/menu/toolbar_menu.xml
@@ -15,6 +15,12 @@
     <!--app:showAsAction="never" />-->
 
     <item
+        android:id="@+id/profile"
+        android:icon="@android:drawable/ic_menu_view"
+        android:title="@string/profile"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/contact_us"
         android:icon="@android:drawable/ic_menu_agenda"
         android:title="@string/contact_us"
