grey_450 was missing in colors.xml file, hence changing it to md_grey_500.

--- a/MyHome/app/src/main/res/layout/fragment_change_passowrd.xml
+++ b/MyHome/app/src/main/res/layout/fragment_change_passowrd.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="45dp"
-            android:textColorHint="@color/grey_450"
+            android:textColorHint="@color/md_grey_500"
             app:errorEnabled="true"
             app:errorTextAppearance="@style/error_appearance"
             app:hintTextAppearance="@style/hint_appearance"
@@ -53,7 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toLeftOf="@+id/password_criteria"
-                android:textColorHint="@color/grey_450"
+                android:textColorHint="@color/md_grey_500"
                 app:errorEnabled="true"
                 app:errorTextAppearance="@style/error_appearance"
                 app:hintTextAppearance="@style/hint_appearance"
@@ -95,7 +95,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/passwordCriteriaLayout"
-            android:textColorHint="@color/grey_450"
+            android:textColorHint="@color/md_grey_500"
             app:errorEnabled="true"
             app:errorTextAppearance="@style/error_appearance"
             app:hintTextAppearance="@style/hint_appearance"
