--- a/MyHome/app/src/main/res/layout/fragment_my_care_providers.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care_providers.xml
@@ -16,13 +16,14 @@
 
     <Button
         android:id="@+id/btn_next_avail_provider"
-        style="@style/db_scheduleButtonStyle"
+        style="@style/primaryButtonStyle"
         android:layout_width="285dp"
         android:layout_height="45dp"
         android:layout_below="@id/desc"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
         android:layout_marginTop="12dp"
+        android:enabled="false"
         android:text="@string/next_available_provider" />
 
     <android.support.v7.widget.RecyclerView
