Combined Intake and ReasonForVisit screens into one Intake screen (still need to upload reason for visit, phone... to AmWell)

--- a/MyHome/app/src/main/res/layout/fragment_my_care_cost.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care_cost.xml
@@ -104,7 +104,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:hint="@string/reason"
-            android:inputType="textEmailAddress"
+            android:inputType="textCapSentences"
             android:maxLines="1"
             android:singleLine="true"
             android:text="I bumped my head" />
