--- a/MyHome/app/src/main/res/layout/fragment_medical_history.xml
+++ b/MyHome/app/src/main/res/layout/fragment_medical_history.xml
@@ -36,7 +36,7 @@
             android:layout_marginTop="30dp"
             android:background="@color/db_white" />
 
-        <ExpandableListView
+        <in.myinnos.alphabetsindexfastscrollrecycler.IndexFastScrollRecyclerView
             android:id="@+id/expandableList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
