--- a/MyHome/app/src/main/res/layout/med_history_child.xml
+++ b/MyHome/app/src/main/res/layout/med_history_child.xml
@@ -3,15 +3,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="64dp"
+    android:layout_marginLeft="16dp"
     android:orientation="vertical">
+
+    <CheckBox
+        android:id="@+id/expChild1"
+        style="@style/tradeGothicLTStd_Dynamic18"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:gravity="center_vertical"
+        android:text="Sample"
+        android:textStyle="normal"
+        android:visibility="gone"
+        tools:ignore="HardcodedText" />
 
     <CheckBox
         android:id="@+id/expChild"
         style="@style/tradeGothicLTStd_Dynamic18"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:gravity="center_vertical"
+        android:button="@drawable/custom_checkbox"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:paddingLeft="12dp"
         android:text="Sample"
         android:textStyle="normal"
         tools:ignore="HardcodedText" />
