--- a/MyHome/app/src/main/res/layout/visit_summary.xml
+++ b/MyHome/app/src/main/res/layout/visit_summary.xml
@@ -47,12 +47,22 @@
         android:layout_marginTop="16dp"
         android:text="Your total cost for today's visit was $0.00" />
 
+    <TextView
+        android:id="@+id/doctor_notes"
+        style="@style/tradeGothicLTStd_Dynamic18"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@id/end_description"
+        android:layout_below="@+id/cost_description"
+        android:layout_marginTop="16dp"
+        android:text="If your doctor is preparing additional information about your visit, you will be able to see it later in your Visit Summaries." />
+
     <Button
         android:id="@+id/view_report"
         style="@style/primaryButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cost_description"
+        android:layout_below="@+id/doctor_notes"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:paddingLeft="32dp"
@@ -60,35 +70,35 @@
         android:text="View Visit Report"
         android:textAllCaps="false" />
 
-    <TextView
-        android:id="@+id/email_me"
-        style="@style/tradeGothicLTStd_Dynamic18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@id/end_description"
-        android:layout_below="@id/view_report"
-        android:text="Email me a confidential summary" />
+    <!--<TextView-->
+        <!--android:id="@+id/email_me"-->
+        <!--style="@style/tradeGothicLTStd_Dynamic18"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignStart="@id/end_description"-->
+        <!--android:layout_below="@id/view_report"-->
+        <!--android:text="Email me a confidential summary" />-->
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@id/end_description"
-        android:layout_below="@id/email_me"
-        android:orientation="horizontal">
+    <!--<RelativeLayout-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignStart="@id/end_description"-->
+        <!--android:layout_below="@id/email_me"-->
+        <!--android:orientation="horizontal">-->
 
-        <CheckBox
-            android:id="@+id/consent_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <!--<CheckBox-->
+            <!--android:id="@+id/consent_checkbox"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
 
-        <TextView
-            style="@style/tradeGothicLTStd_Dynamic18"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/consent_checkbox"
-            android:text="I acknowledge I'm sending confidential medical information through unsecure email" />
+        <!--<TextView-->
+            <!--style="@style/tradeGothicLTStd_Dynamic18"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_toRightOf="@id/consent_checkbox"-->
+            <!--android:text="I acknowledge I'm sending confidential medical information through unsecure email" />-->
 
-    </RelativeLayout>
+    <!--</RelativeLayout>-->
 
     <ProgressBar
         android:id="@+id/summary_progress"
