Added MyCareNow Icon to bottom bar

--- a/MyHome/app/src/main/res/menu/navigation_menu.xml
+++ b/MyHome/app/src/main/res/menu/navigation_menu.xml
@@ -22,7 +22,7 @@
 
     <item
         android:id="@+id/profile"
-        android:icon="@drawable/profile"
+        android:icon="@drawable/mcn_icon"
         android:title="@string/mycare_now"
         app:showAsAction="ifRoom" />
 </menu>
