--- a/MyHome/app/src/main/res/layout/med_history_child.xml
+++ b/MyHome/app/src/main/res/layout/med_history_child.xml
@@ -6,8 +6,8 @@
     android:layout_marginLeft="16dp"
     android:orientation="vertical">
 
-    <!--<CheckBox
-        android:id="@+id/expChild1"
+    <CheckBox
+        android:id="@+id/expChild"
         style="@style/tradeGothicLTStd_Dynamic18"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,10 +15,9 @@
         android:gravity="center_vertical"
         android:text="Sample"
         android:textStyle="normal"
-        android:visibility="gone"
-        tools:ignore="HardcodedText" />-->
+        tools:ignore="HardcodedText" />
 
-    <CheckBox
+    <!--<CheckBox
         android:id="@+id/expChild"
         style="@style/tradeGothicLTStd_Dynamic18"
         android:layout_width="match_parent"
@@ -32,5 +31,5 @@
         android:paddingLeft="12dp"
         android:text="Sample"
         android:textStyle="normal"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText" />-->
 </LinearLayout>
