--- a/MyHome/app/src/main/res/layout/fragment_my_care.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care.xml
@@ -39,20 +39,33 @@
 
         <Button
             android:id="@+id/waiting_room_button"
-            style="@style/enableButtonStyle"
+            style="@style/primaryButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/mcn_desc"
             android:layout_centerHorizontal="true"
+            android:minHeight="45dp"
             android:minWidth="285dp"
-            android:padding="16dp"
             android:text="@string/get_started" />
+
+        <TextView
+            android:id="@+id/previous_visits"
+            style="@style/tradeGothicLTStd_Dynamic20"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/waiting_room_button"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="23dp"
+            android:padding="12dp"
+            android:text="@string/view_previous_visits"
+            android:textColor="@color/accent"
+            android:textStyle="bold" />
 
         <RelativeLayout
             android:id="@+id/personal_info_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/waiting_room_button"
+            android:layout_below="@+id/previous_visits"
             android:layout_marginLeft="12dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="16dp">
@@ -70,7 +83,6 @@
                 android:layout_alignBottom="@id/personal_info_image"
                 android:layout_alignTop="@id/personal_info_image"
                 android:layout_marginLeft="14dp"
-
                 android:layout_toRightOf="@id/personal_info_image"
                 android:gravity="center"
                 android:text="@string/personal_information"
