--- a/MyHome/app/src/main/res/layout/fragment_my_care_cost.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care_cost.xml
@@ -87,8 +87,7 @@
                 android:inputType="phone"
                 android:maxLength="12"
                 android:maxLines="1"
-                android:singleLine="true"
-                android:text="123-867-5309" />
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -114,8 +113,7 @@
                 android:hint="@string/reason"
                 android:inputType="textCapSentences"
                 android:maxLines="1"
-                android:singleLine="true"
-                android:text="I bumped my head" />
+                android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
 
