--- a/MyHome/app/src/main/res/values/colors.xml
+++ b/MyHome/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="accent">@color/teal</color>
     <color name="secondary_text">#757575</color>
     <color name="divider_color">#BDBDBD</color>
+    <color name="dh_orange">#ed711c</color>
 
     <!--Default Colors-->
     <color name="toolbar_background">@color/primary</color>
