Added a method for showing conditions/allergies on the MCN Dashboard

--- a/MyHome/app/src/main/res/layout/fragment_my_care.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care.xml
@@ -154,6 +154,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/medical_history_desc"
                 style="@style/tradeGothicLTStd_Dynamic16"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
