Fixed following issues:
1. app is crashing when user makes changes in profile and upon tappin on my care now icon.
app is crashing when viewing the  medical history and upon tapping on my care now icon
app is crashing when viewing the medications and upon tapping on my care now icon
app is crashing when viewing the pharmacy and upon tapping on my care now icon

2. user unable to check the first radio button in Medical History - both conditions and allergies
when there  is no medical history user able to see  what are the medications are you taking ?instead of complete  medical  history.

3. In medications  long medications are grayed out at the end
8. app is crashing when viewing the pharmacy and toggling between the list and maps - try to tap on my care now icon after toggling to maps.
10. when there  is no medical history user able to see  what are the medications are you taking ?instead of complete  medical  history.

--- a/MyHome/app/src/main/res/layout/med_history_child.xml
+++ b/MyHome/app/src/main/res/layout/med_history_child.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="64dp"
     android:layout_marginLeft="16dp"
+    android:paddingRight="16dp"
     android:orientation="vertical">
 
     <CheckBox
@@ -11,7 +12,6 @@
         style="@style/tradeGothicLTStd_Dynamic18"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
         android:gravity="center_vertical"
         android:text="Sample"
         android:textStyle="normal"
