--- a/MyHome/app/src/main/res/layout/previousvisit_item.xml
+++ b/MyHome/app/src/main/res/layout/previousvisit_item.xml
@@ -20,7 +20,7 @@
         android:layout_marginLeft="6dp"
         android:layout_marginRight="8dp"
         android:layout_toLeftOf="@+id/time"
-        android:text="Mar 4, 2017"
+        tools:text="Mar 4, 2017"
         android:textStyle="bold" />
 
     <TextView
@@ -46,7 +46,7 @@
         android:layout_marginLeft="6dp"
         android:layout_marginRight="8dp"
         android:maxWidth="285dp"
-        android:text="Dr. Steven M. Howard, MD" />
+        tools:text="Dr. Steven M. Howard, MD" />
 
     <TextView
         android:id="@+id/amount"
@@ -58,7 +58,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="5dp"
         android:maxWidth="285dp"
-        android:text="$0.00" />
+        tools:text="$0.00" />
 
     <TextView
         android:id="@+id/text"
@@ -70,6 +70,6 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="5dp"
         android:maxWidth="285dp"
-        android:text="Sequoia Hospital" />
+        tools:text="I cut my hand on a peice of glass" />
 
 </RelativeLayout>
