MCN: Improved the loading progressbar of the Provider Page

--- a/MyHome/app/src/main/res/layout/fragment_my_care_providers.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care_providers.xml
@@ -28,13 +28,15 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/providerList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="visible" />
 
     <ProgressBar
         android:id="@+id/providers_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginBottom="8dp"
         android:indeterminate="true"
-        android:visibility="visible" />
+        android:visibility="gone" />
 </LinearLayout>
